5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1838_1278.log
== TEST (2019-06-24 16:03:58) 
-- CODE:
from numpy import*

tabela = array([
[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]
])

y = 0


C1 = input("Digite o numero da cidade: ")
C2 = input("Digite o numero da cidade: ")

while(C1 != -1) and (C2 != -1):
	i = int(C1[0])-1
	j = int(C2[0])-1

x = tabela[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
   c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
		c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
		c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
		c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 21
    if c1 > 0: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 21
    if c1 > 0: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 21
    if c1 > 0: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 21
    if c1 > 0: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 21
    if c1 > 0: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
   if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 21
    if c1 > 0: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:27:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
  x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
	x = tab[a,b]
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
	x = tab[a,b]
    tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
	x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
    
	x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0: 
			b = int((c1 / 111) - 1)
		x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0:
	b = int((c1 / 111) - 1
			  x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
c1 = int(input("Digite o numero da cidade:"))
if c1 > 0:
	b = int((c1 / 111) - 1
			  x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
		c1 = int(input("Digite o numero da cidade:"))
if c1 > 0:
	b = int((c1 / 111) - 1
			 x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
		c1 = int(input("Digite o numero da cidade:"))
if c1 > 0:
	b = int((c1 / 111) - 1
			 x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 20
    c1 = int(input())
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
if c1 > 0:
	b = int((c1 / 111) - 1
			 x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
	b = int((c1 / 111) - 1
			 x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 22
    b = int((c1 / 111) - 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:28:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
			 x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:29:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
				  x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:29:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
				 x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:29:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
				x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:29:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
				x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:29:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
		x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:29:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
		x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- EXECUTION TIME:
0.676126
-- ERROR:
  File "/home/codebench/codes/1838/1278/main.py", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[a,b]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[a,b]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[i,j]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[i,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[i,j]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[i,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	i = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[i,j]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[i,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	i = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[i,j]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[i,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	i = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[i,j]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[i,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:30:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	i = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1
	x = tab[i,j]
	tempo = tempo + x
    
print(tempo)

-- ERROR:
File "XXXX", line 23
    x = tab[i,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:31:31) 
-- CODE:

Membros

 0
1 post
Denunciar post 
Postado Junho 25, 2018
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
    a = int((c1 / 111) - 1)
    c1 = int(input("Digite o numero da cidade:"))
    if c1 > 0:
        b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
    
print(tempo)﻿

-- ERROR:
File "XXXX", line 4
    0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:34:33) 
-- CODE:
from numpy import*

tabela = array([
[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]
])

tempo = 0


C1 = input("Digite o numero da cidade: ")

while(C1 > 1):
	i = int(C1[0])-1
	C1 = input("Digite o numero da cidade: ")
	if C1>0:
		j = int(C2[0])-1
	x = tabela[i,j]
	tempo = tempo + x


print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:35:12) 
-- CODE:
from numpy import*

tabela = array([
[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]
])

tempo = 0


C1 = input("Digite o numero da cidade: ")
i = int(C1[0])-1
j = int(C2[0])-1
while(C1 > 1):
	i = int(C1[0])-1
	C1 = input("Digite o numero da cidade: ")
	if C1>0:
		j = int(C2[0])-1
	x = tabela[i,j]
	tempo = tempo + x


print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:35:43) 
-- CODE:
from numpy import*

tabela = array([
[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]
])

tempo = 0


C1 = input("Digite o numero da cidade: ")
i = int(C1[0])-1
j = int(C1[0])-1
while(C1 > 1):
	i = int(C1[0])-1
	C1 = input("Digite o numero da cidade: ")
	if C1>0:
		j = int(C2[0])-1
	x = tabela[i,j]
	tempo = tempo + x


print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:36:04) 
-- CODE:
from numpy import*

tabela = array([
[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]
])

tempo = 0


C1 = input("Digite o numero da cidade: ")

while(C1[i] > 1):
	i = int(C1[0])-1
	C1 = input("Digite o numero da cidade: ")
	if C1>0:
		j = int(C2[0])-1
	x = tabela[i,j]
	tempo = tempo + x


print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
    
    x = tab[a,b]
    
    tempo = tempo + x
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
    
   x = tab[a,b]
    
    tempo = tempo + x
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
    
   x = tab[a,b]
    
    tempo = tempo + x
print(tempo)

-- ERROR:
File "XXXX", line 24
    x = tab[a,b]
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
	x = tab[a,b]
    
    tempo = tempo + x
print(tempo)

-- ERROR:
File "XXXX", line 25
    tempo = tempo + x
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
	x = tab[a,b]
	tempo = tempo + x
print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:37:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
	x = tab[a,b]
	tempo = tempo + x
print(tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:37:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

tab = array([
[0,2,11, 6,15,11,1],
[2,0, 7,12, 4, 2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0, 14],
[1,15,13,1,13,14,0]
])

tempo = 0

c1 = int(input("Digite o numero da cidade:"))

while c1 > 0:
	a = int((c1 / 111) - 1)
	c1 = int(input("Digite o numero da cidade:"))
	if c1 > 0:
		b = int((c1 / 111) - 1)
	x = tab[a,b]
	tempo = tempo + x
print(tempo)

-- EXECUTION TIME:
1.07218
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
